--- a/src/pages/agenda.astro
+++ b/src/pages/agenda.astro
@@ -99,6 +99,13 @@ const schema = {
       <span slot="title">Agenda</span>
     </HeaderHero>
     <section class="max-w-screen-lg m-auto flex flex-col items-center px-8">
+
+      <section class="flex flex-col items-center gap-4">
+      <p class="text-center text-2xl font-bold">Our call for speakers is open until February 28th</p>
+      <a href="https://conference-hall.io/ng-baguette-conf-2025" target="_blank" class="btn btn-primary">Submit your talk proposals</a>
+    </section>
+
+    <!--
     <ul
       class="timeline timeline-snap-icon max-md:timeline-compact timeline-vertical"
     >
@@ -137,6 +144,7 @@ const schema = {
         ))
       }
     </ul>
+    -->
     </section>
   </main>
 </Layout>
