--- a/src/pages/cfp.astro
+++ b/src/pages/cfp.astro
@@ -52,7 +52,7 @@ const schema = {
         <HeaderHero>
             <span slot="title">Call For Papers</span>
             <span slot="actions">
-                <button class="btn">Submit your talks</button>
+                <a href="https://conference-hall.io/ng-baguette-conf-2025" target="_blank" class="btn">Submit your talk proposals</a>
             </span>
         </HeaderHero>
 
@@ -80,10 +80,10 @@ const schema = {
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="#646EE4" class="h-5 w-5"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" /></svg>
                     </div>
                     <div class="timeline-start md:text-end mb-10">
-                        <time class="font-mono italic">3rd January 2025</time>
+                        <time class="font-mono italic">February 3rd 2025</time>
                         <div class="text-lg font-black">CFP open</div>
                         <div>Submit your talks for the conference</div>
-                        <button class="btn btn-primary my-4">Submit your talks</button>
+                        <a href="https://conference-hall.io/ng-baguette-conf-2025" target="_blank" class="btn btn-primary my-4">Submit your talks</a>
                     </div>
                     <hr/>
                 </li>
@@ -93,7 +93,7 @@ const schema = {
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" /></svg>
                     </div>
                     <div class="timeline-end mb-10">
-                        <time class="font-mono italic">February 10th 2025</time>
+                        <time class="font-mono italic">February 28th 2025</time>
                         <div class="text-lg font-black">Submission Deadline</div>
                         Last day to submit your talks
                     </div>
@@ -105,7 +105,7 @@ const schema = {
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" /></svg>
                     </div>
                     <div class="timeline-start md:text-end mb-10">
-                        <time class="font-mono italic">February 2025</time>
+                        <time class="font-mono italic">February - March 2025</time>
                         <div class="text-lg font-black">Talks review</div>
                         Our team will review your talks
                     </div>
@@ -117,9 +117,9 @@ const schema = {
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" /></svg>
                     </div>
                     <div class="timeline-end mb-10">
-                        <time class="font-mono italic">Late February</time>
+                        <time class="font-mono italic">Early March 2025</time>
                         <div class="text-lg font-black">Review feedback</div>
-                        <div>We'll send you feedback about your talks:</div>
+                        <div>We'll send you feedback about your talks</div>
                     </div>
                     <hr />
                 </li>
@@ -129,22 +129,11 @@ const schema = {
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" /></svg>
                     </div>
                     <div class="timeline-start md:text-end mb-10">
-                        <time class="font-mono italic">2015</time>
+                        <time class="font-mono italic">Early March 2025</time>
                         <div class="text-lg font-black">Final schedule</div>
                         <div>Once we'll get validation from all accepted talks, we'll publish the event agenda</div>
                     </div>
                 </li>
-            </ul>
-
-            <div class="divider"></div>
-
-            <h2 class="text-4xl font-bold mt-8 mb-12">Topics</h2>
-
-            <ul class="flex flex-wrap justify-center gap-4">
-                <li><Topic title='Web' /></li>
-                <li><Topic title='UI/UX' /></li>
-                <li><Topic title='Testing' /></li>
-                <li><Topic title="Cloud" /></li>
             </ul>
 
             <div class="divider"></div>
@@ -169,6 +158,8 @@ const schema = {
                 </div>
             </article>
 
+            <!--
+
             <div role="alert" class="alert shadow-lg mt-12">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="stroke-info shrink-0 w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
                 <div>
@@ -177,6 +168,7 @@ const schema = {
                 </div>
                 <button class="btn btn-sm btn-primary">Download</button>
             </div>
+            -->
         </section>
     </main>
 </Layout>
