--- a/src/pages/speakers.astro
+++ b/src/pages/speakers.astro
@@ -35,7 +35,14 @@ const schema = {
     <HeaderHero>
       <span slot="title">Speakers</span>
     </HeaderHero>
+    <section class="max-w-screen-lg m-auto flex flex-col items-center px-8">
 
+    <section class="flex flex-col items-center gap-4">
+      <p class="text-center text-2xl font-bold">Our call for speakers is open until February 28th</p>
+      <a href="https://conference-hall.io/ng-baguette-conf-2025" target="_blank" class="btn btn-primary">Submit your talk proposals</a>
+    </section>
+
+    <!--
     <ul
       class="flex flex-wrap justify-center gap-x-20 gap-y-8 mt-12 max-w-screen-lg m-auto"
     >
@@ -49,5 +56,7 @@ const schema = {
         ))
       }
     </ul>
+    -->
+    </section>
   </main>
 </Layout>
