--- a/src/pages/sponsors.astro
+++ b/src/pages/sponsors.astro
@@ -33,10 +33,14 @@ const schema = {
             <span slot="title">Sponsors</span>
         </HeaderHero>
 
+        <p class="text-center text-2xl font-bold">Details upcoming soon..</p>
+
+        <!--
         <section class="flex flex-col items-center max-w-screen-lg m-auto px-8">
             <h2 class="text-3xl text-center uppercase font-bold my-8">Host</h2>
             <h2 class="text-3xl text-center uppercase font-bold my-8">Sponsors</h2>
             <h2 class="text-3xl text-center uppercase font-bold my-8">Community Partners</h2>
         </section>
+    -->
     </main>
 </Layout>
