--- a/src/components/Crew.astro
+++ b/src/components/Crew.astro
@@ -8,15 +8,19 @@ export interface Props {
 
 const {crew} = Astro.props;
 ---
-<figure class="flex flex-col sm:flex-row items-start gap-8 mb-8">
+<figure class="flex flex-col sm:flex-row items-center sm:items-start gap-8 mb-12 sm:mb-8">
     <div class="avatar">
         <div class="mask mask-squircle">
-            <Image height={200} width={200} format="webp" src={crew.heroImage} alt="" />
+            <Image class="max-w-40" height={200} width={200} format="webp" src={crew.heroImage} alt="" />
         </div>
     </div>
-    <figcaption class="flex flex-col">
-        <h2 class="text-3xl font-bold">{crew.name}</h2>
-        <h3 class="text-2xl opacity-80">{crew.title}</h3>
-        <p class="">{crew.bio}</p>
+    <figcaption class="flex flex-col sm:mt-6 items-center sm:items-start">
+        <h2 class="text-2xl sm:text-3xl text-center sm:text-left font-bold">{crew.name}</h2>
+        <h3 class="text-xl sm:text-2xl opacity-80 text-center sm:text-left">{crew.title}</h3>
+        <ul class="flex gap-4 mt-2 sm:mt-0">
+            {crew.linkedin && <li><a href={crew.linkedin} target="_blank"><img src="/icons/linkedin.svg" class="w-6 h-6"></a></li>}
+            {crew.twitter && <li><a href={crew.twitter} target="_blank"><img src="/icons/twitter.svg" class="w-6 h-6"></a></li>}
+            {crew.bluesky && <li><a href={crew.bluesky} target="_blank"><img src="/icons/bluesky.svg" class="w-6 h-6"></a></li>}
+        </ul>
     </figcaption>
 </figure>
