--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,10 +4,6 @@ import Layout from "../layouts/Layout.astro";
 import HeaderHero from '../components/HeaderHero.astro';
 import Crew from '../components/Crew.astro';
 
-import { getCollection } from 'astro:content';
-
-const crewEntries = await getCollection('crew');
-
 const schema = {
     "@context": "https://schema.org",
     "@type": "WebPage",
@@ -50,6 +46,33 @@ const schema = {
     }
 }
 
+const crew = [
+    {
+        name: 'Gerome Grignon',
+        title: 'Frontend Software Engineer at Lucca',
+        heroImage: '/crew/gerome-grignon.png',
+        linkedin: 'https://www.linkedin.com/in/gerome-grignon/',
+        twitter: 'https://x.com/GeromeDEV',
+        bluesky: 'https://bsky.app/profile/gerome.dev'
+    },
+    {
+        name: 'Anthony Pena',
+        title: 'Développeur Web / Staff Engineer at SFΞIR Nantes',
+        heroImage: '/crew/anthony-pena.webp',
+        linkedin: 'https://www.linkedin.com/in/penaanthony/',
+        twitter: 'https://x.com/_Anthony_Pena',
+        bluesky: 'https://bsky.app/profile/anthonypena.bsky.social'
+    },
+    {
+        name: 'Yann-Thomas Le Moigne',
+        title: 'Technical Lead at Apside Top',
+        heroImage: '/crew/yann-thomas-le-moigne.jpeg',
+        linkedin: 'https://www.linkedin.com/in/yatho/',
+        twitter: 'https://x.com/yatho91',
+        bluesky: 'https://bsky.app/profile/yatho.bsky.social'
+    }
+]
+
 ---
 
 
@@ -59,11 +82,12 @@ const schema = {
             <span slot="title">About</span>
         </HeaderHero>
         <section class="max-w-screen-lg m-auto px-8">
-            <h2 class="text-4xl font-bold my-12">Our mission</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h2 class="text-4xl font-bold my-12">The project</h2>
+            <p>The NG Baguette Conference is a community-driven event focused on Angular. Our mission is to bring together developers to share knowledge, network, and grow together. Through engaging talks and networking opportunities, we aim to strengthen the Angular community in France and beyond while celebrating our shared passion for web development.</p>
             <h2 class="text-4xl font-bold my-12">The team</h2>
-            {crewEntries.map(crew => <Crew crew={crew.data} />)}
+            {crew.map(crew => <Crew crew={crew} />)}
 
+            <!--
             <div role="alert" class="alert shadow-lg mt-12">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="stroke-info shrink-0 w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
                 <div>
@@ -72,6 +96,7 @@ const schema = {
                 </div>
                 <button class="btn btn-sm btn-primary">Contact us</button>
             </div>
+            -->
         </section>
     </main>
 </Layout>
