--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,20 +16,22 @@ import {SITE_TITLE} from "../consts";
 						</h1>
 					<h2 class="text-3xl font-bold mt-4">Your new French cooked Angular conference!</h2>
 					<p class="py-6">Join us for a unique Angular conference experience in France! Discover the latest in Angular development, network with experts and fellow developers.</p>
+					<!--
 					<button class="btn btn-primary btn-outline text-2xl font-medium">Get your ticket</button>
+					-->
 
-					<div class="stats shadow mt-8 bg-base-200 grid-flow-row md:grid-flow-col">
+					<div class="stats shadow mt-8 bg-base-200 grid-flow-col">
 						<div class="stat">
 							<div class="stat-title">Speakers</div>
 							<div class="stat-value">8</div>
 						</div>
 						<div class="stat">
 							<div class="stat-title">Attendees</div>
-							<div class="stat-value">100</div>
+							<div class="stat-value">150</div>
 						</div>
 						<div class="stat">
 							<div class="stat-title">Sponsors</div>
-							<div class="stat-value">5</div>
+							<div class="stat-value">?</div>
 						</div>
 
 					</div>
@@ -38,16 +40,16 @@ import {SITE_TITLE} from "../consts";
     xmlns="http://www.w3.org/2000/svg"
     fill="none"
     viewBox="0 0 24 24"
-    class="stroke-info h-6 w-6 shrink-0">
+    class="stroke-info h-6 w-6 shrink-0 hidden md:block">
     <path
       stroke-linecap="round"
       stroke-linejoin="round"
       stroke-width="2"
       d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
   </svg>
-  <span>Call for papers open until 31st January</span>
+  <span>Call for papers open until February 28th</span>
   <div>
-    <a class="btn btn-sm btn-primary">Submit</a>
+    <a class="btn btn-sm btn-primary" href="https://conference-hall.io/ng-baguette-conf-2025" target="_blank">Submit your talk proposals</a>
   </div>
 </div>
 					</div>
