--- a/src/pages/venue.astro
+++ b/src/pages/venue.astro
@@ -35,5 +35,6 @@ const schema = {
             <span slot="title">Venue</span>
             <span slot="description">Join us in Nantes, France - a vibrant city known for its rich history and tech community. Our conference venue provides an ideal setting for learning and networking in the heart of Western France.</span>
         </HeaderHero>
+        <p class="text-center text-2xl font-bold">Details upcoming soon..</p>
     </main>
 </Layout>
