--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,6 +38,11 @@ const metaTitle = `${SITE_TITLE} - ${title}`;
     src: url("../../public/fonts/Luciole-regular.ttf");
   }
 
+  @font-face {
+    font-family: "Lilita";
+    src: url("../../public/fonts/lilitaone-regular.ttf");
+  }
+
   :root {
     --accent: 136, 58, 234;
     --accent-light: 224, 204, 250;
