--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,10 +7,10 @@ import {SITE_TITLE} from "../consts";
 	<main>
 		<div class="hero min-h-screen">
 			<div class="hero-content text-center">
-				<div class="max-w-ld flex flex-col-reverse md:flex-row items-center">
+				<div class="max-w-ld flex flex-col-reverse lg:flex-row items-center">
 					
 					<div class="flex flex-col flex-1 items-center">
-						<h1 class="text-5xl font-bold flex flex-col md:flex-row gap-4 uppercase items-center md:items-start">
+						<h1 class="text-5xl text-white font-bold flex flex-col md:flex-row gap-4 uppercase items-center md:items-start title-font">
 							<span>NG Baguette</span>
 							<span>Conf 2025</span>
 						</h1>
@@ -66,4 +66,9 @@ import {SITE_TITLE} from "../consts";
 	</main>
 </Layout>
 
+<style>
+	.title-font {
+		font-family: "Lilita", sans-serif;
+	}
+</style>
 
