--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,10 @@ import {SITE_TITLE} from "../consts";
 					<button class="btn btn-primary btn-outline text-2xl font-medium">Get your ticket</button>
 					-->
 
-					<div class="stats shadow mt-8 bg-base-200 grid-flow-col">
+					<p class="mt-8 text-2xl font-bold">
+						May 24th, 2025
+					</p>
+					<div class="stats shadow mt-6 bg-base-200 grid-flow-col">
 						<div class="stat">
 							<div class="stat-title">Speakers</div>
 							<div class="stat-value">8</div>
