--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -1,9 +1,8 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import {SITE_TITLE} from "../consts";
+import Layout from '../../layouts/Layout.astro';
+import {SITE_TITLE} from "../../consts";
 ---
-
-<Layout title={SITE_TITLE}>
+<Layout title="24 mai 2025">
 	<main>
 		<div class="hero min-h-screen">
 			<div class="hero-content text-center">
@@ -14,14 +13,14 @@ import {SITE_TITLE} from "../consts";
 							<span>NG Baguette</span>
 							<span>Conf 2025</span>
 						</h1>
-					<h2 class="text-3xl font-bold mt-4">Your new French cooked Angular conference!</h2>
-					<p class="py-6">Join us for a unique Angular conference experience in France! Discover the latest in Angular development, network with experts and fellow developers.</p>
+					<h2 class="text-3xl font-bold mt-4">Votre nouvelle conférence Angular en France !</h2>
+					<p class="py-6">Rejoignez-nous pour une expérience unique de conférence Angular en France ! Découvrez les dernières nouveautés du développement Angular, réseautez avec des experts de tout horizon.</p>
 					<!--
-					<button class="btn btn-primary btn-outline text-2xl font-medium">Get your ticket</button>
+					<button class="btn btn-primary btn-outline text-2xl font-medium">Obtenir votre billet</button>
 					-->
 
 					<p class="mt-8 text-2xl font-bold">
-						May 24th, 2025
+						24 mai 2025
 					</p>
 					<div class="stats shadow mt-6 bg-base-200 grid-flow-col">
 						<div class="stat">
@@ -29,14 +28,13 @@ import {SITE_TITLE} from "../consts";
 							<div class="stat-value">8</div>
 						</div>
 						<div class="stat">
-							<div class="stat-title">Attendees</div>
+							<div class="stat-title">Participants</div>
 							<div class="stat-value">150</div>
 						</div>
 						<div class="stat">
 							<div class="stat-title">Sponsors</div>
 							<div class="stat-value">?</div>
 						</div>
-
 					</div>
 					<div role="alert" class="alert mt-8">
   <svg
@@ -50,9 +48,9 @@ import {SITE_TITLE} from "../consts";
       stroke-width="2"
       d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
   </svg>
-  <span>Call for papers open until February 28th</span>
+  <span>Appel à speakers ouvert jusqu'au 14 mars 2025</span>
   <div>
-    <a class="btn btn-sm btn-primary" href="https://conference-hall.io/ng-baguette-conf-2025" target="_blank">Submit your talk proposals</a>
+    <a class="btn btn-sm btn-primary" href="https://conference-hall.io/ng-baguette-conf-2025" target="_blank">Soumettez vos propositions</a>
   </div>
 </div>
 					</div>
@@ -73,5 +71,4 @@ import {SITE_TITLE} from "../consts";
 	.title-font {
 		font-family: "Lilita", sans-serif;
 	}
-</style>
-
+</style> 
