--- a/src/components/Drawer.astro
+++ b/src/components/Drawer.astro
@@ -1,6 +1,6 @@
 ---
 import Header from './Header.astro';
-import {NAVIGATION_LINKS, CFP_LINK} from "../consts";
+import {NAVIGATION_LINKS} from "../consts";
 import Footer from "./Footer.astro";
 ---
 
@@ -16,7 +16,7 @@ import Footer from "./Footer.astro";
     <div class="drawer-side">
         <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
         <ul class="menu pt-20 w-80 min-h-full bg-base-200 text-base-content">
-            {NAVIGATION_LINKS.map(link => <li><a href={link.href}>{link.title}</a></li>)}
+            {NAVIGATION_LINKS[Astro.currentLocale!].map(link => <li><a href={Astro.currentLocale! + link.href}>{link.title}</a></li>)}
             <!--
             <a class="btn btn-primary mt-4" href={CFP_LINK} target="_blank">Register</a>
             -->
