--- a/src/pages/en/about.astro
+++ b/src/pages/en/about.astro
@@ -1,8 +1,8 @@
 ---
-import {SITE_TITLE} from "../consts";
-import Layout from "../layouts/Layout.astro";
-import HeaderHero from '../components/HeaderHero.astro';
-import Crew from '../components/Crew.astro';
+import {SITE_TITLE} from "../../consts";
+import Layout from "../../layouts/Layout.astro";
+import HeaderHero from '../../components/HeaderHero.astro';
+import Crew from '../../components/Crew.astro';
 
 const schema = {
     "@context": "https://schema.org",
@@ -76,7 +76,7 @@ const crew = [
 ---
 
 
-<Layout title={SITE_TITLE} schema={schema}>
+<Layout title="About" schema={schema}>
     <main>
         <HeaderHero>
             <span slot="title">About</span>
