--- a/src/pages/en/agenda.astro
+++ b/src/pages/en/agenda.astro
@@ -1,7 +1,7 @@
 ---
-import { SITE_TITLE } from "../consts";
-import Layout from "../layouts/Layout.astro";
-import HeaderHero from "../components/HeaderHero.astro";
+import { SITE_TITLE } from "../../consts";
+import Layout from "../../layouts/Layout.astro";
+import HeaderHero from "../../components/HeaderHero.astro";
 import { getCollection } from "astro:content";
 
 const breaks  = [
@@ -93,7 +93,7 @@ const schema = {
 };
 ---
 
-<Layout title={SITE_TITLE} schema={schema}>
+<Layout title="Agenda" schema={schema}>
   <main>
     <HeaderHero>
       <span slot="title">Agenda</span>
@@ -101,7 +101,7 @@ const schema = {
     <section class="max-w-screen-lg m-auto flex flex-col items-center px-8">
 
       <section class="flex flex-col items-center gap-4">
-      <p class="text-center text-2xl font-bold">Our call for speakers is open until February 28th</p>
+      <p class="text-center text-2xl font-bold">Our call for speakers is open until March 14th</p>
       <a href="https://conference-hall.io/ng-baguette-conf-2025" target="_blank" class="btn btn-primary">Submit your talk proposals</a>
     </section>
 
