--- a/src/pages/en/cfp.astro
+++ b/src/pages/en/cfp.astro
@@ -1,7 +1,6 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import HeaderHero from '../components/HeaderHero.astro';
-import Topic from '../components/Topic.astro';
+import Layout from "../../layouts/Layout.astro";
+import HeaderHero from '../../components/HeaderHero.astro';
 import {Image} from 'astro:assets';
 
 const schema = {
@@ -93,7 +92,7 @@ const schema = {
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" /></svg>
                     </div>
                     <div class="timeline-end mb-10">
-                        <time class="font-mono italic">February 28th 2025</time>
+                        <time class="font-mono italic">March 14th 2025</time>
                         <div class="text-lg font-black">Submission Deadline</div>
                         Last day to submit your talks
                     </div>
@@ -105,7 +104,7 @@ const schema = {
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" /></svg>
                     </div>
                     <div class="timeline-start md:text-end mb-10">
-                        <time class="font-mono italic">February - March 2025</time>
+                        <time class="font-mono italic">March 2025</time>
                         <div class="text-lg font-black">Talks review</div>
                         Our team will review your talks
                     </div>
@@ -117,7 +116,7 @@ const schema = {
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" /></svg>
                     </div>
                     <div class="timeline-end mb-10">
-                        <time class="font-mono italic">Early March 2025</time>
+                        <time class="font-mono italic">Middle March 2025</time>
                         <div class="text-lg font-black">Review feedback</div>
                         <div>We'll send you feedback about your talks</div>
                     </div>
@@ -129,7 +128,7 @@ const schema = {
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" /></svg>
                     </div>
                     <div class="timeline-start md:text-end mb-10">
-                        <time class="font-mono italic">Early March 2025</time>
+                        <time class="font-mono italic">End of March 2025</time>
                         <div class="text-lg font-black">Final schedule</div>
                         <div>Once we'll get validation from all accepted talks, we'll publish the event agenda</div>
                     </div>
