--- a/src/pages/en/coc.astro
+++ b/src/pages/en/coc.astro
@@ -1,7 +1,7 @@
 ---
-import {SITE_TITLE, SITE_DOMAIN} from "../consts";
-import Layout from "../layouts/Layout.astro";
-import HeaderHero from '../components/HeaderHero.astro';
+import {SITE_TITLE, SITE_DOMAIN} from "../../consts";
+import Layout from "../../layouts/Layout.astro";
+import HeaderHero from '../../components/HeaderHero.astro';
 
 const schema = {
     "@context": "https://schema.org",
@@ -49,7 +49,7 @@ const schema = {
 ---
 
 
-<Layout title={SITE_TITLE} schema={schema}>
+<Layout title="Code of conduct" schema={schema}>
     <main>
         <HeaderHero>
             <span slot="title">Code of conduct</span>
