--- a/src/pages/en/speaker/[slug].astro
+++ b/src/pages/en/speaker/[slug].astro
@@ -1,8 +1,8 @@
 ---
 import { getCollection } from "astro:content";
-import HeaderHero from "../../components/HeaderHero.astro";
-import { SITE_DOMAIN, SITE_TITLE } from "../../consts";
-import Layout from "../../layouts/Layout.astro";
+import HeaderHero from "../../../components/HeaderHero.astro";
+import { SITE_DOMAIN, SITE_TITLE } from "../../../consts";
+import Layout from "../../../layouts/Layout.astro";
 
 export async function getStaticPaths() {
   const speakers = await getCollection("speaker");
