--- a/src/pages/en/speakers.astro
+++ b/src/pages/en/speakers.astro
@@ -1,9 +1,9 @@
 ---
-import Speaker from "../components/Speaker.astro";
+import Speaker from "../../components/Speaker.astro";
 import { getCollection } from "astro:content";
-import { SITE_TITLE, SITE_DOMAIN } from "../consts";
-import Layout from "../layouts/Layout.astro";
-import HeaderHero from "../components/HeaderHero.astro";
+import { SITE_TITLE, SITE_DOMAIN } from "../../consts";
+import Layout from "../../layouts/Layout.astro";
+import HeaderHero from "../../components/HeaderHero.astro";
 
 const speakers = await getCollection("speaker");
 
@@ -30,7 +30,7 @@ const schema = {
 };
 ---
 
-<Layout title={SITE_TITLE} schema={schema}>
+<Layout title="Speakers" schema={schema}>
   <main>
     <HeaderHero>
       <span slot="title">Speakers</span>
@@ -38,7 +38,7 @@ const schema = {
     <section class="max-w-screen-lg m-auto flex flex-col items-center px-8">
 
     <section class="flex flex-col items-center gap-4">
-      <p class="text-center text-2xl font-bold">Our call for speakers is open until February 28th</p>
+      <p class="text-center text-2xl font-bold">Our call for speakers is open until March 14th</p>
       <a href="https://conference-hall.io/ng-baguette-conf-2025" target="_blank" class="btn btn-primary">Submit your talk proposals</a>
     </section>
 
