--- a/src/pages/fr/sponsors.astro
+++ b/src/pages/fr/sponsors.astro
@@ -1,16 +1,16 @@
 ---
-import {SITE_TITLE} from "../consts";
-import Layout from "../layouts/Layout.astro";
-import HeaderHero from '../components/HeaderHero.astro';
-import {type ISponsor} from "../models/sponsor.model";
+import {SITE_TITLE} from "../../consts";
+import Layout from "../../layouts/Layout.astro";
+import HeaderHero from '../../components/HeaderHero.astro';
+import type { ISponsor } from "../../models/sponsor.model";
 
 const sponsors: Array<ISponsor> = [];
 
 const schema = {
     "@context": "https://schema.org",
     "@type": "ItemList",
-    "name": "Conference Sponsors",
-    "description": "A list of sponsors supporting the web development conference.",
+    "name": "Sponsors de la conférence",
+    "description": "Liste des sponsors soutenant la conférence de développement web.",
     "itemListElement": sponsors.map(sponsor => ({
         "@type": "Organization",
         "name": sponsor.name,
@@ -23,24 +23,22 @@ const schema = {
         ]
     }))
 }
-
 ---
 
-
-<Layout title={SITE_TITLE} schema={schema}>
+<Layout title="Sponsors" schema={schema}>
     <main>
         <HeaderHero>
             <span slot="title">Sponsors</span>
         </HeaderHero>
 
-        <p class="text-center text-2xl font-bold">Details upcoming soon..</p>
+        <p class="text-center text-2xl font-bold">Détails à venir prochainement...</p>
 
         <!--
         <section class="flex flex-col items-center max-w-screen-lg m-auto px-8">
-            <h2 class="text-3xl text-center uppercase font-bold my-8">Host</h2>
+            <h2 class="text-3xl text-center uppercase font-bold my-8">Hôte</h2>
             <h2 class="text-3xl text-center uppercase font-bold my-8">Sponsors</h2>
-            <h2 class="text-3xl text-center uppercase font-bold my-8">Community Partners</h2>
+            <h2 class="text-3xl text-center uppercase font-bold my-8">Partenaires communautaires</h2>
         </section>
-    -->
+        -->
     </main>
-</Layout>
+</Layout> 
