--- a/src/pages/en/coc.astro
+++ b/src/pages/en/coc.astro
@@ -1,5 +1,5 @@
 ---
-import {SITE_TITLE, SITE_DOMAIN} from "../../consts";
+import {SITE_DOMAIN} from "../../consts";
 import Layout from "../../layouts/Layout.astro";
 import HeaderHero from '../../components/HeaderHero.astro';
 
