feat: Add Camille Pillot to crew members

--- a/src/pages/fr/about.astro
+++ b/src/pages/fr/about.astro
@@ -35,6 +35,13 @@ const crew = [
         linkedin: 'https://www.linkedin.com/in/yatho/',
         twitter: 'https://x.com/yatho91',
         bluesky: 'https://bsky.app/profile/yatho.bsky.social'
+    },
+    {
+        name: 'Camille Pillot',
+        title: 'Développeuse full-stack @Takima',
+        heroImage: '/crew/camille-pillot.jpg',
+        linkedin: 'https://www.linkedin.com/in/camille-pillot-455517177/',
+        twitter: 'https://x.com/CamiPillotDev'
     }
 ]
 ---
