--- a/src/pages/en/sponsors.astro
+++ b/src/pages/en/sponsors.astro
@@ -32,7 +32,14 @@ const schema = {
             <span slot="title">Sponsors</span>
         </HeaderHero>
 
-        <p class="text-center text-2xl font-bold">Details upcoming soon..</p>
+        <section class="max-w-screen-lg m-auto px-8 my-12">
+            <h2 class="text-4xl font-bold mb-6">Become a sponsor</h2>
+            <p class="mb-4">We are thrilled to present our sponsorship prospectus for NG Baguette. As a sponsor, you will have the unique opportunity to connect with the French Angular community and promote your brand to a passionate audience of web developers.</p>
+            <p class="mb-8">Our prospectus details the different partnership levels and associated benefits.</p>
+            <a href="/pdf/sponsoring-prospectus-ngbaguette-2025.pdf" class="btn btn-primary" download>
+                Download the sponsorship prospectus
+            </a>
+        </section>
 
         <!--
         <section class="flex flex-col items-center max-w-screen-lg m-auto px-8">
